# chatter

./: .gitignore  CMakeLists.txt  README  README.md  chatter.lua
sample/: test.xml
save/: save1  saving
src/: CMakeLists.txt  ChatEdge.cpp  ChatEdge.hpp  ChatNode.cpp  ChatNode.hpp  Chatter.cpp  Chatter.hpp  driver.cpp  main.cpp
src/chatter/: CMakeLists.txt  Chatter.cpp  Chatter.hpp
src/editor/: CMakeLists.txt  NodeWindow.cpp  NodeWindow.hpp  Timeline.cpp  Timeline.hpp  UIElement.hpp  editor.cpp
test/: CMakeLists.txt  save1  testAddNode.cpp
